2006-09-07  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-defines.h: Adding gdkkeysyms.h to includes.
	Fixes #NB39714.

2006-09-06  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-color-button.c: Redraw the button if cancel
	was pressed in the color selection dialog. Fixes #NB39778 but I think
	the real cause of the bug lies at a different level.

2006-09-06  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
	
	[0.14.1 release]

	* configure.ac: Version bump. Display version string during configure
	stage.

	* debian/changelog: Adding release details.

2006-09-06  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-font-selection-dialog.c: Adding a comment
	about the new property introduced. Once we have property documentation
	we need to mark it with a "Since: 0.14.1" keyword ("font-scaling").

2006-09-06  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* Makefile.am:
	* configure.ac: Removing the unit tests (ut/outo) from the build
	system. They're introducing an additionall dependency and need to be
	fixed/arranged differently anyways. 

2006-09-06  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-app.h:
	* hildon-widgets/hildon-defines.h: Applying Johan's new key mapping
	patch back again. WARNING: This breaks compatibility with IT-2006.

	* hildon-widgets/hildon-caption.c: Add specific behaviour for
	containers when press button event occurs. Fixes #NB36843.

	* hildon-widgets/hildon-program.c:
	* hildon-widgets/hildon-window.c: Adding a patch to fix occassional
	BadWindow X errors. Fixes #NB39679.

2006-09-06  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-sort-dialog.c: Adding a function to add
	reversed sort keys. Reversed sort keys present Descending/Ascending
	selection instead of Ascending/Descending default. Fixes #NB32544. 
